2006-03-09  Werner Koch  <wk@g10code.com>

	Released 0.8.0.

	* src/inst-sylpheed-claws.nsi: Don't select be Default.

	* include/config.nsi.in: Disabled Eudora.
	* src/inst-sections.nsi: Ditto.
	* src/Makefile.am: Ditto

2006-03-08  Werner Koch  <wk@g10code.com>

	* src/inst-sections.nsi: Play the tune only for the source installer.
	* src/installer.nsi: And don't reserve the tune file.

2006-03-07  Werner Koch  <wk@g10code.com>

	* configure.ac: Don't build Eudora due to license problems.

2006-03-03  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (EXTRA_DIST): Change
	patches/gpa-0.7.2/01-bin-open.patch to
	patches/gpa-0.7.2/01-keyserver-list.patch.
	* packages/packages.current: Use the right GPA 0.7.2.

	* patches/gpa-0.7.2/01-bin-open.patch: Rename to ...
	* patches/gpa-0.7.2/01-keyserver-list.patch: ... this.  Remove
	binary open patch.

	* packages/packages.current: Use GPA 0.7.2.

	* packages/packages.current: Use libgpg-error 1.2 and GPGME 1.2.

2006-02-28  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-atk.nsi: Fix outpath of library.

2006-02-23  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-glib.nsi: Add glib20.mo.
	* src/uninst-glib.nsi: Remove glib20.mo.
	* src/inst-gtk+.nsi: Add gtk20.mo.
	* src/uninst-gtk+.nsi: Remove gtk20.mo.
	* src/inst-atk.nsi: Add atk10.mo.
	* src/uninst-atk.nsi: Remove atk10.mo.

2006-02-15  Werner Koch  <wk@gnupg.org>

	Released 0.7.0.

	* patches/gpa-0.7.2/01-bin-open.patch: New file.

2006-02-15  Marcus Brinkmann  <marcus@g10code.de>

	* patches/gpgme/03-w32-io.patch: New file.
	* patches/gpgme-1.1.1-cvs1152/03-w32-io.patch: New file.

2006-02-14  Werner Koch  <wk@gnupg.org>

	* README (Instructions): Add a list of required Debian packages.

2006-01-31  Werner Koch  <wk@g10code.com>

	* src/installer.nsi (InstallDir): Removed trailing backslashes.

2006-01-26  Werner Koch  <wk@g10code.com>

	Released 0.6.0.

2006-01-25  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4 (GPG4WIN_BPKG_BINSRC): Kludge to allow